Fixed homepage alignment issues

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -2,12 +2,10 @@ body {
     padding-top:0px;
 }
 
-.footer {
-    top: 1675px;
-}
 .splash {
 /*	margin-top: 75px;*/
 }
+
 .tree {
 	position: absolute;
 	top: 0;
